GearsetPOC/force-app/main/default/objects/Contract/fields/Address_Formatted_Text__c.field-meta.xml
<CustomField>
    <fullName>Address_Formatted_Text__c</fullName>
    <label>Address (Formatted)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>