GearsetPOC/force-app/main/default/objects/Contract/fields/AR_Address__c.field-meta.xml
<CustomField>
    <fullName>AR_Address__c</fullName>
    <label>AR Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>