GearsetPOC/force-app/main/default/objects/Contract/fields/AR_Fax__c.field-meta.xml
<CustomField>
    <fullName>AR_Fax__c</fullName>
    <label>AR Fax</label>
    <length>100</length>
    <type>Text</type>
</CustomField>