GearsetPOC/force-app/main/default/objects/Contract/fields/AR_Phone__c.field-meta.xml
<CustomField>
    <fullName>AR_Phone__c</fullName>
    <label>AR Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>