GearsetPOC/force-app/main/default/objects/Contract/fields/CCR_Address__c.field-meta.xml
<CustomField>
    <fullName>CCR_Address__c</fullName>
    <label>CCR Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>