GearsetPOC/force-app/main/default/objects/Contract/fields/CCR_Email__c.field-meta.xml
<CustomField>
    <fullName>CCR_Email__c</fullName>
    <label>CCR Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>