GearsetPOC/force-app/main/default/objects/Contract/fields/CCR_Name__c.field-meta.xml
<CustomField>
    <fullName>CCR_Name__c</fullName>
    <label>CCR Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>