GearsetPOC/force-app/main/default/objects/Contract/fields/CCR_Phone__c.field-meta.xml
<CustomField>
    <fullName>CCR_Phone__c</fullName>
    <label>CCR Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>