GearsetPOC/force-app/main/default/objects/Contract/fields/CCR_Position__c.field-meta.xml
<CustomField>
    <fullName>CCR_Position__c</fullName>
    <label>CCR Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>