GearsetPOC/force-app/main/default/objects/Contract/fields/Created_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formatted__c</fullName>
    <formula>Mid(Text(CreatedDate),9,2)+&quot;/&quot;+Mid(Text(CreatedDate),6,2)+&quot;/&quot;+Mid(Text(CreatedDate),1,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date (Formatted)</label>
    <type>Text</type>
</CustomField>