GearsetPOC/force-app/main/default/objects/Contract/fields/Disruption_Email__c.field-meta.xml
<CustomField>
    <fullName>Disruption_Email__c</fullName>
    <label>Disruption Email</label>
    <type>Email</type>
</CustomField>