GearsetPOC/force-app/main/default/objects/Contract/fields/Docusign_Status__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Status__c</fullName>
    <defaultValue>&quot;Not Sent&quot;</defaultValue>
    <label>Docusign Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>