GearsetPOC/force-app/main/default/objects/Contract/fields/EIL_Address__c.field-meta.xml
<CustomField>
    <fullName>EIL_Address__c</fullName>
    <label>EIL Address</label>
    <length>200</length>
    <type>Text</type>
</CustomField>