GearsetPOC/force-app/main/default/objects/Contract/fields/EIL_Email__c.field-meta.xml
<CustomField>
    <fullName>EIL_Email__c</fullName>
    <label>EIL Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>