GearsetPOC/force-app/main/default/objects/Contract/fields/EIL_Name__c.field-meta.xml
<CustomField>
    <fullName>EIL_Name__c</fullName>
    <label>EIL Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>