GearsetPOC/force-app/main/default/objects/Contract/fields/EIL_Phone__c.field-meta.xml
<CustomField>
    <fullName>EIL_Phone__c</fullName>
    <label>EIL Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>