GearsetPOC/force-app/main/default/objects/Contract/fields/EIL_Position__c.field-meta.xml
<CustomField>
    <fullName>EIL_Position__c</fullName>
    <label>EIL Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>