GearsetPOC/force-app/main/default/objects/Contract/fields/GND_End_Date__c.field-meta.xml
<CustomField>
    <fullName>GND_End_Date__c</fullName>
    <label>GND End Date</label>
    <type>Date</type>
</CustomField>