GearsetPOC/force-app/main/default/objects/Contract/fields/GND_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>GND_Start_Date__c</fullName>
    <label>GND Start Date</label>
    <type>Date</type>
</CustomField>