GearsetPOC/force-app/main/default/objects/Contract/fields/Post_Code_Zip__c.field-meta.xml
<CustomField>
    <fullName>Post_Code_Zip__c</fullName>
    <label>Post Code / Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>