GearsetPOC/force-app/main/default/objects/Contract/fields/Trade_Contracts_Company__c.field-meta.xml
<CustomField>
    <fullName>Trade_Contracts_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Contracts Company</label>
    <referenceTo>Trade_Contracts_Company__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>