GearsetPOC/force-app/main/default/objects/Contract/recordTypes/GND_Contract.recordType-meta.xml
<RecordType>
    <fullName>GND_Contract</fullName>
    <active>true</active>
    <label>GND Contract</label>
</RecordType>