GearsetPOC/force-app/main/default/objects/Contract/recordTypes/Trade_Contracts.recordType-meta.xml
<RecordType>
    <fullName>Trade_Contracts</fullName>
    <active>true</active>
    <label>Trade Contracts</label>
</RecordType>